--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@expo/vector-icons": "^6.3.1",
     "axios": "^0.18.0",
     "expo": "^27.0.1",
+    "moment": "^2.22.1",
     "native-base": "^2.4.5",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "react-navigation": "^2.0.2",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-native": "^4.2.0",
+    "react-router-navigation": "^1.0.0-rc.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.2.6"
